# android-libs

./: .clang-format  .gitignore  .gitmodules  AUTHORS  Makefile  Makefile.java-macos.mk  Makefile.java-zesty.mk  README.md  build.gradle  build.gradle.in  settings.gradle  template.pom
android-libs/: .gitignore  CMakeLists.txt  build.gradle.in  proguard-rules.pro
android-libs/src/androidTest/java/io/ooni/mk/androidTest/: MKGeoIPLookupTest.java  MKNDTTest.java  MKOrchestraTest.java  MKReporterTest.java  MKSettings.java  MKTEvent.java  MKTMeasurement.java  MKTSettings.java  MKVersionTest.java  MKWebConnectivityTest.java  UnitTestSuite.java
android-libs/src/main/: AndroidManifest.xml
android-libs/src/main/cpp/: .gitignore  collector.cpp  ffi.cpp  geoiplookup.cpp  mkall_util.h  orchestra.cpp  reporter.cpp  version.cpp
android-libs/src/main/java/io/ooni/mk/: MKAsyncTask.java  MKCollectorResubmitResults.java  MKCollectorResubmitTask.java  MKEvent.java  MKGeoIPLookupResults.java  MKGeoIPLookupTask.java  MKOrchestraResults.java  MKOrchestraTask.java  MKReporterResults.java  MKReporterTask.java  MKResourcesManager.java  MKVersion.java
android-libs/src/main/java/io/ooni/mk/android/: MKResources.java
example/java/: HttpInvalidRequestLineExample.java  OrchestrateExample.java
gradle/wrapper/: gradle-wrapper.properties
java/org/openobservatory/measurement_kit/: EntryCallback.java  HttpInvalidRequestLine.java  LogCallback.java  LogSeverity.java  LoggerApi.java  NdtTest.java  OoniTestBase.java  TestCompleteCallback.java  (+1 more)
jni/: .gitignore  Android.mk  Android.mk.in  Application.mk  FFI.cpp  MKGeoIPLookup.cpp  MKGeoIPLookup.h  MKOrchestra.cpp  MKVersion.cpp  collector.cpp  dns_api.cpp  ffi.cpp  geoiplookup.cpp  io_github_measurement_kit_jni_sync_OONI.h  logger_api.cpp  measurement_kit_jni.cpp  mk-jni-util.hpp  mkall_util.h  ooni_sync_api.cpp  ooni_test_wrapper.hpp  ooni_test_wrapper_extra.cpp  orchestra.cpp  portolan_sync_api.cpp  saved_jvm.hpp  version.cpp
jni/wrappers/: .gitignore  FFI.cpp  FFI.h  MKGeoIPLookup.cpp  common.cpp  common.hpp  common.i  common_wrap.cpp  environment_.cpp  environment_.hpp  logger_api.cpp  nettest.i  nettest_wrap.cpp  nettest_wrap.h  nettests.hpp  nettests.i  nettests.m4  nettests_wrap.cpp  ooni.hpp  ooni.i  ooni_sync_api.cpp  ooni_test_wrapper.hpp  ooni_test_wrapper.i  ooni_test_wrapper_extra.cpp  ooni_wrap.cpp  portolan_sync_api.cpp  saved_jvm.cpp  version.cpp
script/: m4  macos  swig  swig-nettest  zesty-gcc
script/android/: archive  build  configure  download  sign
script/common/: copy-sources  javah
scripts/: geoip  javac  m4  run  run-swig  swig
scripts/android/: archive  download
src/main/: AndroidManifest.xml
(+190 files in other folders)
